templates/iot/device-registry/060-Route-service-device-registry.yaml
kind: Route
apiVersion: v1
metadata:
  labels:
    app: enmasse
    compnent: hono-service-device-registry
    enmasse-component: iot
  name: hono-service-device-registry-https
spec:
  port:
    targetPort: https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: hono-service-device-registry
